--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "test": "jest",
@@ -24,6 +24,7 @@
     "@react-native-aria/focus": "^0.2.9",
     "@react-native-aria/interactions": "^0.2.16",
     "@react-native-aria/overlays": "^0.3.15",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -66,10 +67,10 @@
     "@testing-library/react-native": "^13.2.2",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
-    "babel-preset-expo": "^13.2.3",
+    "babel-preset-expo": "13.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "jest": "^30.0.5",
+    "jest": "29.7.0",
     "jest-expo": "^53.0.9",
     "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
